# tracknet

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  code-quality.yml  lint.yml  test.yml
.windsurf/workflows/: openspec-apply-stage2a.md  openspec-apply-stage2b.md  openspec-apply-stage2c.md  openspec-apply.md  openspec-proposal.md
configs/data/: tracknet.yaml
configs/model/: convnext_deformable_fpn_heatmap.yaml  convnext_fpn_heatmap.yaml  convnext_hrnet_heatmap.yaml  vit_heatmap.yaml  vit_lora_heatmap.yaml  vit_qlora_heatmap.yaml
configs/training/: default.yaml  int8.yaml  qlora.yaml
demo/: convnext_deformable_demo.py  convnext_demo.py  hf_vit_qlora_demo.py  hf_vit_qlora_demo_v2.py  hf_vit_qlora_demo_v3.py  qlora_int4_lora_demo.py  quantization_demo.py  vit_demo.py
docs/: contributing.md  testing.md
docs/config/: config.md
docs/data/: tracknet.md
docs/datasets/: datasets.md
docs/models/: build.md  convnext_deformable_fpn_heatmap.md  convnext_fpn_heatmap.md  hrnet_decoder.md  migration_guide_lora_quantization.md  models.md  vit_heatmap.md
docs/scripts/: scripts.md
docs/tools/: annotation_workflow.md  batch_player_tracker.md  coco_converter.md  court_annotator.md  index.md  player_tracker.md  visualize_dataset.md
docs/training/: README_quantization.md  logging.md  losses_metrics_callbacks.md  micro_batching.md  quantization.md  trainer.md
openspec/: AGENTS.md  docstring_rules.md  project.md  tests_rules.md
openspec/changes/add-unified-annotation-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/add-unified-annotation-pipeline/specs/annotation-pipeline/: spec.md
openspec/changes/enhance-lightning-training/: design.md  proposal.md  tasks.md
openspec/changes/enhance-lightning-training/specs/config-organization/: spec.md
openspec/changes/enhance-lightning-training/specs/documentation-restructure/: spec.md
openspec/changes/enhance-lightning-training/specs/lightning-enhancement/: spec.md
openspec/changes/implement-lora-quantization/: design.md  proposal.md  tasks.md
openspec/changes/implement-lora-quantization/specs/lora-quantization/: spec.md
openspec/changes/setup-code-style-environment/: design.md  proposal.md  tasks.md
openspec/changes/setup-code-style-environment/specs/development-environment/: spec.md
spec/: design.md  directory_structure.md  tickets.md
tests/: conftest.py  utils.py
tests/e2e/: test_training_pipeline.py
tests/integration/: test_config_pipeline.py  test_lora_quantization_integration.py
tests/tools/: test_annotation_pipeline.py
tests/unit/: test_lora.py  test_quantization.py  test_utils.py
tracknet/: __init__.py  constants.py
tracknet/datasets/: __init__.py  tracknet_frame.py  tracknet_sequence.py
tracknet/datasets/base/: image_dataset.py  sequence_dataset.py
tracknet/datasets/utils/: augmentations.py  collate.py
tracknet/models/: __init__.py  build.py
tracknet/models/backbones/: convnext_backbone.py  vit_backbone.py
tracknet/models/decoders/: deformable_decoder.py  fpn_decoder.py  hrnet_decoder.py  upsampling_decoder.py
tracknet/models/heads/: heatmap_head.py
tracknet/models/lora/: __init__.py  config.py  lora_wrapper.py  quantization.py
tracknet/scripts/: __init__.py  eval.py  predict.py  train.py  train_sequential.py
tracknet/tools/: README.md  annotation_common.py  annotation_converter.py  batch_player_tracker.py  coco_converter.py  court_annotation_manager.py  court_annotator.py  player_tracker.py  tracknet_frame_config.yaml  visualize_dataset.py
tracknet/tools/utils/: video_generator.py
tracknet/tools/utils/preprocess/: tracker.py
tracknet/tools/utils/ui/: court_annotation_form.py  court_selector.py  player_identifier.py  player_selector.py
tracknet/training/: __init__.py  lightning_datamodule.py  lightning_module.py  trainer.py
tracknet/training/callbacks/: checkpoint.py  early_stopping.py  lr_scheduler.py
tracknet/training/losses/: heatmap_loss.py
tracknet/training/metrics/: __init__.py
tracknet/utils/: __init__.py  config.py  int4_lora.py  int8_quant.py  logging.py  quantization.py
