[project]
name = "tracknet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.7",
    "omegaconf>=2.3.0",
    "pillow>=12.0.0",
    "pytorch-lightning>=2.5.5",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
