[project]
name = "tracknet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.0",
    "deep-sort-realtime>=1.3.2",
    "gdown>=5.2.0",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.7",
    "omegaconf>=2.3.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "peft>=0.17.0",
    "pillow>=12.0.0",
    "pytorch-lightning>=2.5.5",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchreid>=0.2.5",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "ultralytics>=8.3.223",
]
